syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package chat_v1;

option go_package = "github.com/gogapopp/microservices/chat-server/api/chat_v1;chat_v1";

service ChatV1 {
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
}

message CreateRequest {
    repeated string usernames = 1;
}

message CreateResponse {
    int64 id = 1;
}

message DeleteRequest {
    int64 id = 1;
}

message DeleteResponse {
    google.protobuf.Empty empty = 1;
}

message SendMessageRequest {
    string from = 1;
    string text = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message SendMessageResponse {
    google.protobuf.Empty empty = 1;
}